--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "parkmedical_dashboard_backend",
   "version": "1.0.0",
@@ -8,11 +7,14 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^7.3.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.8.6",
+    "parkmedical_dashboard_backend": "file:",
     "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
